# ffone

./: Cargo.toml  README.md  t
audio_decoders/gstreamer/: Cargo.toml
audio_decoders/gstreamer/src/: gst_context.rs  lib.rs
audio_decoders/gstreamer/src/gst_context/: decoded_test.json  test.raw.data  tests.rs
core/: Cargo.toml
core/src/: controller.rs  device_link.rs  error.rs  lib.rs  util.rs  view.rs
core/src/audio_system/: audio.rs  audio_decoder.rs  audio_filter.rs  audio_processor.rs  audio_receiver.rs  downsampler.rs  element.rs  mod.rs  pipeline.rs  queue.rs  shortener.rs  sync.rs  virtual_microphone.rs
core/src/audio_system/downsampler/: tests.rs
core/src/audio_system/pipeline/: audio_decoder.rs  demuxer.rs  mod.rs  resizer.rs  shortener.rs  sync.rs  virtual_microphone.rs
core/src/audio_system/pipeline/demuxer/: tests.rs
core/src/audio_system/pipeline/resizer/: tests.rs
core/src/audio_system/pipeline/shortener/: tests.rs
core/src/audio_system/pipeline/sync/: tests.rs
core/src/audio_system/shortener/: tests.rs
core/src/device/: discoverer.rs  element.rs  link.rs  mod.rs  storage.rs
core/src/util/: clock.rs  component.rs  element.rs  mod.rs  ring_buffer.rs  runnable.rs
devices/: Cargo.toml
devices/lan/: Cargo.toml
devices/lan/src/: audio_stream.rs  broadcast.rs  connection.rs  discoverer.rs  lib.rs  link.rs  message_stream.rs  network.rs  poller.rs
devices/lan/src/discoverer/: tests.rs
devices/lan/src/link/: tests.rs
ffi/: Cargo.toml  build.rs  cbindgen.toml
ffi/include/: audio.h  error.h  queue.h  rc.h  util.h
ffi/src/: lib.rs  rc.c  rc.rs  util.c  util.rs
ffi/src/audio_system/: audio.rs  mod.rs  queue.rs
src/: main.rs  test.opus.data
virtual_microphones/pulseaudio/: Cargo.toml  build.rs
virtual_microphones/pulseaudio/src/: clock.rs  core.c  core.h  ffi.rs  lib.rs  main.rs  pa_ctx.c  pa_ctx.h  stream.c  stream.h  virtual_device.c  virtual_device.h
