[package]
name = "ffone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { package = "ffone_core", version = "0.1.0", path = "core" }
ffi = { package = "ffone_ffi", version = "0.1.0", path = "ffi" }
crossbeam-utils = "0.8.16"
lan_device = { package = "ffone_lan_device", version = "0.1.0", path = "devices/lan" }
gst = { package = "gstreamer", version = "0.20.7" }
serde_json = "1.0.107"

[dependencies.gstreamer]
package = "ffone_gst_audio_decoder"
version = "0.1.0"
path = "audio_decoders/gstreamer"

[target.'cfg(target_family = "unix")'.dependencies.pulseaudio]
package = "ffone_pa_virtual_microphone"
version = "0.1.0"
path = "virtual_microphones/pulseaudio"

[workspace]
members = [
    "core",
    "ffi",
    "devices/lan",
    "audio_decoders/gstreamer",
    "virtual_microphones/pulseaudio"
]
