[package]
name = "ffone_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mueue = "0.5.1"
paste = "1.0.12"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
smallvec = { version = "1.11.0", features = ["const_generics", "const_new", "union"] }
thiserror = "1.0.40"
