[package]
name = "ffone_gst_audio_decoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstreamer = "0.20.7"
gstreamer-app = "0.20.7"
core = { package = "ffone_core", version = "0.1.0", path = "../../core" }

[dev-dependencies]
serde_json = "1.0.104"