[package]
name = "ffone_lan_device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { package = "ffone_core", version = "0.1.0", path = "../../core" }
mio = { version = "0.8.8", features = ["os-poll", "net"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
